--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,61 +1,85 @@
 # 0 is too far from ` ;)
-set -g base-index 1
+ set-option -g base-index 1
+# set command prefix for tmux
+ unbind C-b
+ set-option -g prefix C-a
+#
+# # Automatically set window title
+ set-window-option -g automatic-rename on
+ set-option -g set-titles on
+#
+set-option -g default-shell /bin/zsh
+set -g utf8
+set-option -g utf8 on
+set -g default-terminal "screen-256color"
+ set -g status-keys vi
+ set -g history-limit 10000
+#
+ setw -g mode-keys vi
+ setw -g mouse on
+ setw -g monitor-activity on
+#
+ bind-key v split-window -h
+ bind-key s split-window -v
+#
+ bind-key J resize-pane -D 5
+ bind-key K resize-pane -U 5
+ bind-key H resize-pane -L 5
+ bind-key L resize-pane -R 5
+#
+ bind-key M-j resize-pane -D
+ bind-key M-k resize-pane -U
+ bind-key M-h resize-pane -L
+ bind-key M-l resize-pane -R
+#
+# # Vim style pane selection
+ bind h select-pane -L
+ bind j select-pane -D
+ bind k select-pane -U
+ bind l select-pane -R
+#
+# # Use Alt-vim keys without prefix key to switch panes
+ bind -n M-h select-pane -L
+ bind -n M-j select-pane -D
+ bind -n M-k select-pane -U
+ bind -n M-l select-pane -R
+#
+# # Use Alt-arrow keys without prefix key to switch panes
+ bind -n M-Left select-pane -L
+ bind -n M-Right select-pane -R
+ bind -n M-Up select-pane -U
+ bind -n M-Down select-pane -D
+#
+ # Shift arrow to switch windows
+ bind -n S-Left  previous-window
+ bind -n S-Right next-window
+#
+# # No delay for escape key press
+ set -sg escape-time 0
+# # Reload tmux configi
+ bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# #############################
+# ### Color & Style Settings ###
+# ##############################
+#
+# source ~/my_dotfiles/tmux_airline.sh
+# source /home/lijo/Downloads/powerline-develop/powerline/bindings/tmux/powerline.conf
+set -g status-interval 2
+set -g status-fg colour231
+set -g status-bg colour234
+set -g status-left-length 20
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]'
+set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
+set -g status-right-length 150
 
-# Automatically set window title
-set-window-option -g automatic-rename on
-set-option -g set-titles on
+set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
+set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
 
-#set -g default-terminal screen-256color
-set -g status-keys vi
-set -g history-limit 10000
+set-window-option -g window-status-fg colour249
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-bell-attr none
+set-window-option -g window-status-activity-fg yellow
+set-window-option -g window-status-bell-fg red
 
-setw -g mode-keys vi
-setw -g mouse on
-setw -g monitor-activity on
+#set -g status-right "#[fg=colour234,bg=colour31]#[fg=colour31] #[fg=colour117,bold]%Y-%m-%d %H:%M#[fg=colour31,nobold] #[bg=colour234]#[fg=colour234] #[fg=green]#H"
 
-bind-key v split-window -h
-bind-key s split-window -v
-
-bind-key J resize-pane -D 5
-bind-key K resize-pane -U 5
-bind-key H resize-pane -L 5
-bind-key L resize-pane -R 5
-
-bind-key M-j resize-pane -D
-bind-key M-k resize-pane -U
-bind-key M-h resize-pane -L
-bind-key M-l resize-pane -R
-
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
-
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
-
-# Shift arrow to switch windows
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
-# No delay for escape key press
-set -sg escape-time 0
-
-# Reload tmux config
-bind r source-file ~/.tmux.conf
-#############################
-### Color & Style Settings ###
-##############################
-
-source ~/dotfiles/tmux/theme.sh
-source /home/lijo/Downloads/powerline-develop/powerline/bindings/tmux/powerline.conf
