--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,9 @@
  set-option -g prefix C-a
 #
 # # Automatically set window title
- set-window-option -g automatic-rename on
+# set-window-option -g automatic-rename on
  set-option -g set-titles on
+ set-option -g allow-rename off
 #
 set-option -g default-shell /bin/zsh
 set -g utf8
