--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@
  set-option -g allow-rename off
 #
 set-option -g default-shell /bin/zsh
-set -g utf8
-set-option -g utf8 on
+#set -g utf8
+#set-option -g utf8 on
 set -g default-terminal "screen-256color"
  set -g status-keys vi
  set -g history-limit 10000
@@ -71,6 +71,7 @@ set -g status-bg colour234
 set -g status-left-length 20
 set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]'
 set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
+#set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tput cols`)'
 set -g status-right-length 150
 
 set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
