vim and tmux status line adjusted

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,9 @@
  set-option -g allow-rename off
 #
 set-option -g default-shell /bin/zsh
-#set -g utf8
-#set-option -g utf8 on
-set -g default-terminal "screen-256color"
+# set -g utf8
+# set-option -g utf8 on
+# set -g default-terminal "screen-256color"
  set -g status-keys vi
  set -g history-limit 10000
 #
