--- a/.tmux.conf
+++ b/.tmux.conf
@@ -82,15 +82,16 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 # source /home/lijo/Downloads/powerline-develop/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-fg colour231
-set -g status-bg colour234
+set -g status-bg colour0
 set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour234,nobold]'
+set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour0,nobold]'
 set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
 #set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tput cols`)'
 set -g status-right-length 150
+set-option -g status-position top
 
-set -g window-status-format "#[fg=colour244,bg=colour234]#I #[fg=colour240] #[default]#W "
-set -g window-status-current-format "#[fg=colour234,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour234,nobold]"
+set -g window-status-format "#[fg=colour244,bg=colour0]#I #[fg=colour240] #[default]#W "
+set -g window-status-current-format "#[fg=colour0,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour0,nobold]"
 
 set-window-option -g window-status-fg colour249
 set-window-option -g window-status-activity-attr none
