--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@
 # set-window-option -g automatic-rename on
  set-option -g set-titles on
  set-option -g allow-rename off
+ set-option -g renumber-windows on
 #
 set-option -g default-shell /bin/zsh
 # set -g utf8
