--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,7 @@
  unbind C-b
  set-option -g prefix C-a
 #
+
 # # Automatically set window title
 # set-window-option -g automatic-rename on
  set-option -g set-titles on
@@ -78,27 +79,29 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 # #############################
 # ### Color & Style Settings ###
 # ##############################
-#
-# source ~/my_dotfiles/tmux_airline.sh
-# source /home/lijo/Downloads/powerline-develop/powerline/bindings/tmux/powerline.conf
-set -g status-interval 2
-set -g status-fg colour231
-set -g status-bg colour0
-set -g status-left-length 20
-set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour0,nobold]'
-set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
-#set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tput cols`)'
-set -g status-right-length 150
-set-option -g status-position top
 
-set -g window-status-format "#[fg=colour244,bg=colour0]#I #[fg=colour240] #[default]#W "
-set -g window-status-current-format "#[fg=colour0,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour0,nobold]"
+######### OWN setting for status line ##################
+# set -g status-interval 2
+# set -g status-fg colour231
+# set -g status-bg colour0
+# set -g status-left-length 20
+# set -g status-left '#[fg=colour16,bg=colour254,bold] #S #[fg=colour254,bg=colour0,nobold]'
+# set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
 
-set-window-option -g window-status-fg colour249
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-bell-attr none
-set-window-option -g window-status-activity-fg yellow
-set-window-option -g window-status-bell-fg red
 
-#set -g status-right "#[fg=colour234,bg=colour31]#[fg=colour31] #[fg=colour117,bold]%Y-%m-%d %H:%M#[fg=colour31,nobold] #[bg=colour234]#[fg=colour234] #[fg=green]#H"
+# set -g status-right-length 150
+# set-option -g status-position top
+
+# set -g window-status-format "#[fg=colour244,bg=colour0]#I #[fg=colour240] #[default]#W "
+# set -g window-status-current-format "#[fg=colour0,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour0,nobold]"
+
+# set-window-option -g window-status-fg colour249
+# set-window-option -g window-status-activity-attr none
+# set-window-option -g window-status-bell-attr none
+# set-window-option -g window-status-activity-fg yellow
+# set-window-option -g window-status-bell-fg red
+#########################################################################
+
+#theme
+run-shell "/home/lijo/my_dotfiles/nord-tmux-develop/nord.tmux"
 
