--- a/.tmux.conf
+++ b/.tmux.conf
@@ -89,8 +89,8 @@ bind-key -T copy-mode-vi C-\ select-pane -l
 # set -g status-right '#(eval /home/lijo/my_dotfiles/tmux-airline `tmux display -p "#{client_width}"`)'
 
 
-# set -g status-right-length 150
-# set-option -g status-position top
+set -g status-right-length 150
+set-option -g status-position top
 
 # set -g window-status-format "#[fg=colour244,bg=colour0]#I #[fg=colour240] #[default]#W "
 # set -g window-status-current-format "#[fg=colour0,bg=colour31]#[fg=colour117,bg=colour31] #I  #[fg=colour231,bold]#W #[fg=colour31,bg=colour0,nobold]"
